Reorder swagger docs and reapply security
